<resources>
    <string name="app_name">Meter reading</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="copyright">\u00A9 Copyright UPEPO Technology Co Ltd</string>
    <string name="title_activity_meter_location">Map</string>
    <string name="table_reading">Reading</string>
    <string name="meter_no">Acc No:</string>
    <string name="p_reading">P_read</string>
    <string name="acc_no">Acc No_</string>
    <string name="c_name">C_name</string>
    <string name="p_rdate">P_R Date</string>
    <string name="meter_reader">Meter Reader</string>
    <string name="status">Status</string>
    <string name="C_Reading">C_Reading</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="title_activity_meter_status">MeterStatus</string>
    <string name="title_activity_geo_fence_meter">Map</string>
    <string name="title_activity_meter_fence">MeterFence</string>
    <string name="title_activity_last_fence">LastFence</string>
    <string name="title_activity_analytics">Analytics</string>
    <string name="title_activity_survey">Site Survey</string>
    <string name="title_activity_disconnection">Meter disconnection</string>
    <string name="remarks">Remarks</string>
    <string name="action_taken">Action</string>
    <string name="disconnectio_reason">Disconected By</string>
    <string name="reconnected_by">Technician</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_number">Customer Number</string>
    <string name="existing_connection">Existing Connection</string>
    <string name="type_of_connection">Type of connection</string>
    <string name="type_of_sanitation">Sanitation type</string>
    <string name="readings_atdisconnection">Meter reading as at disconnection</string>
    <string name="Disconnection_method">Disconnecction Reason</string>
    <string name="title_activity_reconnection">Reconnection</string>
    <string name="title_activity_system_meter">SystemMeter</string>
    <string name="title_activity_login">Bahari</string>
    <string name="title_activity_landing">Bahari</string>

</resources>
