<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".meterStatus.MeterStatus"

    tools:showIn="@layout/activity_meter_status">
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/relativemap"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="All meters in Zone EPZ 455"
            android:textSize="@dimen/textsize"
            android:textColor="@color/textcolor"
            android:layout_below="@id/relativemap"
            android:id="@+id/zonehead"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/zonehead"
            android:background="@drawable/bg_gray"
            android:id="@+id/zonelayer">
            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/TextEdit"
                android:layout_weight="1"
                android:textSize="@dimen/textsize"
                android:layout_marginTop="4dp"
                android:textColor="@color/textcolor"
                android:id="@+id/zonetitle"
                android:text="Zone:"
                />
            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:id="@+id/zonespinner"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Search"
                android:layout_marginTop="4dp"
                android:id="@+id/btnsearch"
                android:background="@drawable/roundbuttons"
                />
        </LinearLayout>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/zonelayer"
        android:id="@+id/layer0"
        android:elevation="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/zonelayer">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/table_content_text"
                android:textColor="@color/table_content"

                android:text="C_Reading"
                android:padding="@dimen/table_padding"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/table_content_text"
                android:textColor="@color/table_content"

                android:text="@string/acc_no"
                android:padding="@dimen/table_padding"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/table_content_text"
                android:textColor="@color/table_content"

                android:text="@string/c_name"
                android:padding="@dimen/table_padding"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/table_content_text"
                android:textColor="@color/table_content"

                android:text="@string/p_rdate"
                android:padding="@dimen/table_padding"
                android:layout_weight="1"
                />

        </LinearLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.RecyclerView
        android:layout_below="@id/layer0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rcv_status"/>
</RelativeLayout>