<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DisconnectionActivity"
    tools:showIn="@layout/activity_disconnection">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/layer1">
        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:id="@+id/relativemap"/>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:layout_marginLeft="@dimen/main_card_margin_right"
            android:layout_marginRight="@dimen/main_card_margin_right"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/relativemap"
            map:cardCornerRadius="2dp"
            android:id="@+id/card"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_margin="@dimen/activity_horizontal_margin">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:background="@drawable/bg_gray"
                    android:layout_marginTop="4dp"
                    android:id="@+id/zonelayer">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/TextEdit"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textSize="@dimen/title_size"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/textcolor"
                        android:id="@+id/zonetitle"
                        android:text="Meter disconnection"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@id/zonelayer"
                    android:id="@+id/search">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="@dimen/TextEdit"
                        android:layout_weight="0.5"
                        android:layout_marginTop="8dp"
                        android:textSize="@dimen/textsize"
                        android:textColor="@color/textcolor"
                        android:text="@string/meter_no"
                        />
                    <EditText
                        android:id="@+id/editTextsearch"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/TextEdit"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_gray"
                        android:layout_weight="1"
                        android:inputType="number" />
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="@dimen/TextEdit"
                        android:layout_weight="1"
                        android:layout_marginTop="8dp"
                        android:text="Search"
                        android:layout_marginLeft="5dp"
                        android:id="@+id/btnsearch"
                        android:background="@drawable/roundbuttons"
                        />
                </LinearLayout>
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/search"
                    android:background="#ffff"
                    android:layout_marginTop="@dimen/table_margin"
                    android:outlineSpotShadowColor="@color/colorPrimary"
                    android:id="@+id/Tbl_Readings">
                    <TableRow >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/textsize"
                            android:textColor="@color/textcolor"
                            android:text="@string/acc_no"
                            android:background="@drawable/cell_shape"
                            android:padding="@dimen/table_padding"
                            android:layout_weight="1"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/textsize"
                            android:textColor="@color/textcolor"
                            android:text="@string/c_name"
                            android:background="@drawable/cell_shape"
                            android:padding="@dimen/table_padding"
                            android:layout_weight="1"
                            />

                    </TableRow>

                    <TableRow >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/table_content_text"
                            android:textColor="@color/table_content"
                            android:id="@+id/txtaccno"

                            android:background="@drawable/cell_shape"
                            android:padding="@dimen/table_padding"
                            android:layout_weight="1"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/table_content_text"
                            android:textColor="@color/table_content"
                            android:id="@+id/txtcname"

                            android:background="@drawable/cell_shape"
                            android:padding="@dimen/table_padding"
                            android:layout_weight="1"
                            />

                    </TableRow>
                </TableLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@id/Tbl_Readings"
                    android:background="@drawable/bg_gray"
                    android:layout_marginTop="4dp"
                    android:id="@+id/meter_reader_layer"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="@dimen/TextEdit"
                        android:layout_weight="1"
                        android:textSize="@dimen/textsize"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/textcolor"
                        android:id="@+id/reader"
                        android:text="@string/Disconnection_method"
                        />
                    <Spinner
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:id="@+id/mreader"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/bg_gray"
                    android:layout_marginTop="4dp"
                    android:layout_below="@id/meter_reader_layer"
                    android:id="@+id/meter_status_layer"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="@dimen/TextEdit"
                        android:layout_weight="1"
                        android:textSize="@dimen/textsize"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/textcolor"
                        android:id="@+id/txtmstatus"
                        android:text="@string/disconnectio_reason"
                        />
                    <Spinner
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:id="@+id/mstatus"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/meter_status_layer"
                    android:id="@+id/layerg">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="@dimen/TextEdit"
                        android:layout_weight="1"
                        android:textSize="@dimen/textsize"
                        android:textColor="@color/textcolor"
                        android:text="Disconection Msg:"
                        />
                    <EditText
                        android:id="@+id/edtmessage"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/TextEdit"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_gray"

                        android:layout_weight="1"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layerg"
                    android:id="@+id/layerh"
                    android:layout_marginTop="13dp">
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="@dimen/button_height"
                        android:layout_weight="1"
                        android:text="Disconnect"
                        android:id="@+id/btnregister"
                        android:background="@drawable/roundbuttons"
                        android:layout_marginRight="5dp"
                        android:layout_centerHorizontal="true"/>

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="@dimen/button_height"
                        android:layout_weight="1"
                        android:text="Cancel"
                        android:id="@+id/btnLocation"
                        android:background="@drawable/roundbuttons"
                        />

                </LinearLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       android:layout_below="@id/layer1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/copyright"
        android:text="@string/copyright"
        android:layout_alignParentBottom="true"
        android:textAlignment="center"
        android:textSize="@dimen/copyright_size"
        android:textColor="@color/table_content"
        android:layout_marginTop="3dp"/>

</RelativeLayout>
